@@ -1,0 +1,17 @@
+#ifndef LIBPORT_FWD_HH
+# define LIBPORT_FWD_HH
+
+namespace urbi
+{
+  // hash.hh.
+  template<class K, class V>
+  class hash_map_type;
+
+  // lockable.hh.
+  class Lockable;
+
+  // semaphore.hh.
+  class Semaphore;
+}
+
+#endif // ! LIBPORT_FWD_HH
