@@ -13,4 +13,10 @@ $(libport_srcdir)/semaphore.hh			\
 $(libport_srcdir)/thread.hh			\
 $(libport_srcdir)/ufloat.h			\
 $(libport_srcdir)/ufloat.hh			\
+$(libport_srcdir)/uffloat.hh			\
+$(libport_srcdir)/ulong-fixed-point.hh		\
 $(libport_srcdir)/utime.hh
+
+libport_sources = 				\
+$(libport_srcdir)/ufloat.cc			\
+$(libport_srcdir)/uffloat.cc
